fix: icon alignment in footer

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -18,7 +18,7 @@
     img {
       display: block;
       margin: 0 auto 16px;
-      max-width: 166px;
+      max-height: 70px;
     }
   }
 
@@ -33,14 +33,13 @@
       display: flex;
       flex-direction: row;
       align-items: center;
-      margin: 0;
 
       & + & {
         margin-left: 56px;
       }
 
-      &:last-child {
-        //margin-left: auto;
+      &:first-child {
+        margin-right: 56px;
       }
 
       img {
